--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "runhaskell-discord"
+name = "testauskameli"
 version = "0.1.0"
 edition = "2021"
 authors = ["Luukas Pörtfors <lajp@iki.fi>"]
