--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ version = "0.9.7"
 features = ["vendored"]
 
 [dependencies]
+imageproc = "0.22"
+rusttype = "0.9.2"
+image = "*"
 dotenv = "0.15"
 tracing = "0.1"
 tracing-subscriber = "0.2"
+regex = "1.5.5"
