--- a/testauskameli/Cargo.toml
+++ b/testauskameli/Cargo.toml
@@ -26,6 +26,8 @@ imageproc = { version = "0.22.0", optional = true }
 rusttype = { version = "0.9.2", optional = true }
 image = { version = "0.23.14", optional = true }
 regex = { version = "1.5.4", optional = true }
+which = "4.2.4"
+itertools = "0.10.3"
 
 [features]
 default = ["snippets"]
