Add support for Common Lisp

--- a/testauskameli/Cargo.toml
+++ b/testauskameli/Cargo.toml
@@ -27,7 +27,11 @@ which = "4.2.4"
 
 [features]
 default = ["snippets"]
-snippets = ["nomeme", "echo", "haskell"]
+snippets = ["nomeme", "echo", "haskell", "c", "js", "lisp", "idris"]
 nomeme = ["imageproc", "rusttype", "image", "regex"]
 echo = []
 haskell = []
+c = []
+js = []
+lisp = []
+idris = []
