--- a/testauskameli/Cargo.toml
+++ b/testauskameli/Cargo.toml
@@ -28,12 +28,11 @@ which = "4.2.4"
 
 [features]
 default = ["snippets"]
-snippets = ["nomeme", "echo", "haskell", "c", "js", "lisp", "idris", "h264ify"]
+snippets = ["nomeme", "echo", "haskell", "c", "lisp", "idris", "h264ify"]
 nomeme = ["imageproc", "rusttype", "image", "regex"]
 echo = []
 haskell = []
 c = []
-js = []
 lisp = []
 idris = []
 h264ify = []
